# openfootmanager

./: .flake8  .pre-commit-config.yaml  CI_CD_FIX_SUMMARY.md  CI_CD_SETUP.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_ROADMAP.md  EVENT_CLASS_ANALYSIS.md  LOCAL_TESTING.md  Makefile  PHASE1_SUMMARY.md  PHASE_1_3_SUMMARY.md  PRE_COMMIT_FIXES.md  README.md  README_TESTING.md  SECURITY_ANALYSIS.md  TESTING.md  TESTING_SUMMARY.md  demo_features.py  demo_transfer_system.py  mypy.ini  openfootmanager.db  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  simple_gui_demo.py  test_gui.py
.github/workflows/: python-app.yml  python-app.yml.disabled
docs/: TRANSFER_SYSTEM.md  readme.rst
docs/source/: simulation.rst
logs/: .576b3afa75523f0043c4665923481787bb271798-audit.json
ofm/core/: settings.py
ofm/core/db/: database.py  generators.py
ofm/core/db/models/: __init__.py  (+8 more)
ofm/core/football/: club.py  detailed_positions.py  formation.py  player.py  playercontract.py  team_simulation.py
ofm/core/save/: __init__.py  save_manager.py  serializer.py
ofm/core/season/: __init__.py  calendar.py  fixture_generator.py  promotion_relegation.py  season_manager.py
ofm/core/simulation/: event.py  live_game_manager.py  simulation.py  team_strategy.py
ofm/core/transfer/: __init__.py  ai_manager.py  calendar_integration.py  market.py  negotiation.py  search.py  valuation.py
ofm/res/: clubs_def.json  names.json
ofm/tests/: conftest.py  test_basic.py  test_calendar.py  test_corner_kick_event.py  test_cross_event.py  test_db.py  test_dribble_event.py  test_formation.py  test_free_kick_event.py  test_match_engine.py  test_promotion_relegation.py  test_save_system.py  test_season_structure.py  test_settings.py  test_shot_events.py  test_simulation.py  test_substitutions.py  test_teams.py  test_transfer_system.py  utils.py
ofm/ui/: gui.py  table.py
ofm/ui/controllers/: __init__.py  debug_match_controller.py  substitution_window_controller.py  team_explorer_controller.py  team_selection_controller.py
ofm/ui/pages/: __init__.py  player_profile.py  team_explorer.py  team_selection.py
scripts/: local_test.sh  setup_testing.sh  test_runner.py
(+11 files in other folders)
