[tool.poetry]
name = "openfootmanager"
version = "0.1.0"
description = "A free and open source football manager game."
authors = ["sturdy-robot <pedrenriquegg@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ttkbootstrap = "^1.10.1"
pyyaml = "^6.0.1"
sqlalchemy = "^2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
pytest-timeout = "^2.3.1"
pytest-benchmark = "^4.0.0"
hypothesis = "^6.104.2"
pre-commit = "^3.7.1"
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.10.0"
types-PyYAML = "^6.0.12"
types-requests = "^2.32.0"
bandit = {extras = ["toml"], version = "^1.7.8"}
safety = "^3.2.0"
sphinx = "^7.3.7"
pygments = "^2.18.0"
docutils = "^0.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["ofm/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["ofm"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/ui/pages/*",
    "*/ui/controllers/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # Skip assert_used test

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
